feat: set mozo name on login
